### configure.ac -- Autoconf for Lemonade Sqlite

# Lemonade Sqlite (https://github.com/michipili/lemonade-sqlite)
# This file is part of Lemonade Sqlite
#
# Copyright © 2016 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt

AC_INIT([src/lemonade_Sqlite.ml])
AC_CONFIG_MACRO_DIR([Library/Autoconf])
AC_NEED_OCAML
AC_NEED_FINDLIB
AC_NEED_FINDLIB_PKG([broken])
AC_NEED_FINDLIB_PKG([mixture])
AC_NEED_FINDLIB_PKG([lemonade])
AC_NEED_FINDLIB_PKG([sqlite3])
AC_WITH_OCAML_SITE_LIB
AC_CONFIG_FILES([Makefile.config])
AC_OUTPUT

### End of file `configure.ac'
